--- a/coding-assignment-2-h1-selfdrivingcars-h1-morrinxx 2/history.html
+++ b/coding-assignment-2-h1-selfdrivingcars-h1-morrinxx 2/history.html
@@ -8,30 +8,33 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <title>Histroy</title>
 </head>
-<body class="firebird">
+<body>
   <article>
     <a href="homePage.html" class="btn btn-success" role="button">Homepage</a>
-    <a href="selfDrivingCars.html" class="btn btn-primary" role="button">Basic information</a>
-    <a href="selfDrivingCarsSurrounding.html" class="btn btn-warning" role="button">How do autonomous cars see their surrounding?</a>
-    <a href="DifferrentCompanys.html" class="btn btn-info" role="button">Progress of the different companies</a>
+    <a href="selfDrivingCars.html" class="btn btn-primary" role="button">Basic Informations</a>
+    <a href="selfDrivingCarsSurrounding.html" class="btn btn-warning" role="button">How Do Autonomous Cars See Their Surrounding?</a>
+    <a href="DifferrentCompanys.html" class="btn btn-info" role="button">Progress of the different Companys</a>
     <a href="history.html" class="btn btn-info" role="button">History</a>
   </article>
   <article>
     <section>
         <h1>History</h1>
         <h2>1920s</h2>
-        <p>In 1925, Houdina Radio Control demonstrated the radio-controlled "American Wonder" on New York City streets, traveling up Broadway and down Fifth Avenue through the thick of the traffic jam.</p>
-        <p>The American Wonder was a 1926 Chandler that was equipped with a transmitting antennae on the tonneau and was operated by a second car that followed it and sent out radio impulses which were caught by the transmitting antennae.</p>
+        <p>In 1925, Houdina Radio Control demonstrated the radio-controlled "American Wonder" on New York City streets, traveling up Broadway and down Fifth Avenue through the thick of the traffic jam.
+        The American Wonder was a 1926 Chandler that was equipped with a transmitting antennae on the tonneau and was operated by a second car that followed it and sent out radio impulses which were caught by the transmitting antennae.</p>
         <h2>1950s</h2>
-        <p>In 1953 the RCA Labs built a car which was guided by wires, which were laid in patterns at the laboratory.</p>
-        <p>In 1957 a successful demonstration of this car took place on Nebraska Highway 2.</p>
+        <p>In 1953 the RCA Labs built a car which was guided by wires, which were laid in patterns at the laboratory.
+        In 1957 a demonstration in Nebraska Highway 2 took place with the sam system at it sucessfully worked.</p>
         <h2>1960s</h2>
-        <p>In 1960 the Ohio State University started a project to develop driverless cars which were actived by electronic devices imbedded in the roadway.</p>
-        <p>During the 1960s the United Kingdom tested a driverless Citroen DS which interacted with magnetic cabels being embedded in the road.</p>
-        <p>It went through a test track at 80 miles per hour without deviation of speed or direction under any weather conditions, and in a far more effective way than by human control.</p>
-        <img src="CitreonDS.png" alt="" width="600" height="300">
+        <p>In 1960 the Ohio State University started a project to develop driverless cars which were actived by electronic devices imbedded in the roadway.
+        During the 1960s the United Kingdom tested a driverless Citroen DS which interacts with magnetic cabels which were embedded in the road.
+        It went through a test track at 80 miles per hour without deviation of speed or direction in any weather conditions, and in a far more effective way than by human control.</p>
+        <img src="CitroenDS.png" alt="Citroen DS">
         <h2>1980s</h2>
-        <p></p>
+        <p>In the 1980s, a vision-guided Mercedes-Benz robotic van, designed by Ernst Dickmanns and his team at the Bundeswehr University Munich, achieved a speed of 39 mile per hour on streets without traffic.
+
+        In 1987 HRL Laboratories demonstrated the first off-road map and sensor-based autonomous navigation on the ALV. The vehicle traveled over 2,000 feet at 1.9 miles per hour on complex terrain with steep slopes, ravines, large rocks, and vegetation.
+        By 1989, Carnegie Mellon University had pioneered the use of neural networks to steer and otherwise control autonomous vehicles, forming the basis of contemporary control strategies.</p>
     </section>
   </article>
 </body>
