Animation starts and can be stopped

--- a/src/selfDrivingCars.html
+++ b/src/selfDrivingCars.html
@@ -11,20 +11,19 @@
 
 <body class="tesla">
   <article>
-    <ul>
-      <li><a href="homePage.html">Homepage</a></li>
-      <li><a class="active" href="selfDrivingCars.html">Basic information</a></li>
-      <li><a href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
-      <li><a href="DifferrentCompanys.html">Different Companys</a></li>
-      <li><a href="history.html">History</a></li>
-    </ul>
-  </article>
+          <ul>
+            <li><a href="homePage.html">Homepage</a></li>
+            <li><a href="selfDrivingCars.html">Basic information</a></li>
+            <li><a class="active" href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
+            <li><a href="DifferrentCompanys.html">Different Companys</a></li>
+            <li><a href="history.html">History</a></li>
+          </ul>
+        </article>
 
   <article>
-    <div style="padding:20px;margin-top:30px;margin-right:500px;margin-left:500px;height:1500px;">
-    <h1>Self-driving cars</h1>
+
     <section>
-      <h2>What are autonomous cars?</h2>
+      <h1>What are autonomous cars?</h1>
       <p>A car which can navigate, scan its surrounding and drive without any human input is called an autonomous car, also known as driverless, self-driving or robotic car.</p>
       <p>In 2017 no cars had a permission to drive on public roads without a person behind the wheel who can take control over the car if necessary.</p>
     </section>
@@ -34,10 +33,10 @@
       <table>
         <thead>
           <tr>
-            <th colspan="6"> Automation levels</th>
+            <th colspan="6" class="tableheader"> Automation levels</th>
           </tr>
           <tr>
-            <th>SAE level</th><th>Name</th><th>Definition</th><th>Execution of steering and acceleration/deceleration</th><th>Monotoring of driving environment</th><th>Dynamic driving task</th>
+            <th>SAE level</th><th>Name</th><th class="tableMiddle">Definition</th><th>Execution of steering and acceleration/deceleration</th><th>Monotoring of driving environment</th><th>Dynamic driving task</th>
           </tr>
         </thead>
         <tbody>
