--- a/src/teslaProgress.html
+++ b/src/teslaProgress.html
@@ -9,19 +9,20 @@
     <title>Tesla</title>
   </head>
   <body class="teslaPage">
+
+
     <article>
-      <ul>
-        <li><a href="homePage.html">Homepage</a></li>
-        <li><a href="selfDrivingCars.html">Basic information</a></li>
-        <li><a href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
-        <li><a class="active" href="DifferrentCompanys.html">Different Companys</a></li>
-        <li><a href="history.html">History</a></li>
-      </ul>
-    </article>
+        <ul>
+          <li><a href="homePage.html">Homepage</a></li>
+          <li><a href="selfDrivingCars.html">Basic information</a></li>
+          <li><a class="active" href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
+          <li><a href="DifferrentCompanys.html">Different Companys</a></li>
+          <li><a href="history.html">History</a></li>
+        </ul>
+      </article>
     <article>
       <h1>Tesla</h1>
       <section>
-        <div style="padding:20px;margin-top:30px;margin-right:500px;margin-left:500px;height:1500px;">
         <h2>Advanced Sensor Coverage</h2>
         <p>All of Tesla's products are equipped with its self-driving hardware.</p>
         <p>Eight surround cameras provide a 360 degrees of visibility around the car</p>
