--- a/src/enterGamePage.html
+++ b/src/enterGamePage.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <form>
-      <h1> Play the best Drivegame EU and NA</h1>
+      <h1> Play the best Drivegame EU-West and NA</h1>
       <p>To play the game you shoudl give in a Name for the highscore anf then press start</p>
       <br>
       <label for="name">Name</label>
