--- a/src/enterGamePage.html
+++ b/src/enterGamePage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="transitionStyle.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="module" src="store.js" charset="utf-8"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
@@ -15,6 +16,8 @@
       <br>
       <label for="name">Name</label>
       <input id="name" type="text" name="" value="">
+      <input id="store" type="button" name="" value="Store">
+      <input id="clear" type="button" name="" value="Clear">
       <br>
       <a href="transition.html" class="btn btn-info" role="button">Start</a>
     </form>
