--- a/src/highScorePage.html
+++ b/src/highScorePage.html
@@ -2,9 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="SelfDrivingCarsStyleSheet.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Highscore</title>
   </head>
   <body>
     <h1>HighScoreTable</h1>
+    <table>
+      <thead>
+        <tr>
+          <th colspan="3" class="tableheader"> TOP PLAYERS OF THE BEST DRIVEGAME EU-WEST AND NA</th>
+        </tr>
+        <tr>
+          <th>PLAYER</th><th class="tableMiddle">POINTS</th><th>TIME</th>
+        </tr>
+      </thead>
+      <tbody>
+
+      </tbody>
+    </table>
   </body>
 </html>
