--- a/src/highScorePage.html
+++ b/src/highScorePage.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script type="module" src="print_out.js" charset="utf-8"></script>
     <title>Highscore</title>
   </head>
   <body>
@@ -17,6 +18,9 @@
         </tr>
         <tr>
           <th>PLAYER</th><th class="tableMiddle">POINTS</th><th>TIME</th>
+        </tr>
+        <tr>
+          <th></th><th class="tableMiddle">POINTS</th><th>TIME</th>
         </tr>
       </thead>
       <tbody>
