--- a/src/selfDrivingCarsSurrounding.html
+++ b/src/selfDrivingCarsSurrounding.html
@@ -10,14 +10,15 @@
     </head>
     <body class="googleCar">
       <article>
-              <ul>
-                <li><a href="homePage.html">Homepage</a></li>
-                <li><a href="selfDrivingCars.html">Basic information</a></li>
-                <li><a class="active" href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
-                <li><a href="DifferrentCompanys.html">Different Companys</a></li>
-                <li><a href="history.html">History</a></li>
-              </ul>
-            </article>
+          <ul>
+            <li><a href="homePage.html">Homepage</a></li>
+            <li><a href="selfDrivingCars.html">Basic information</a></li>
+            <li><a class="active" href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
+            <li><a href="teslaProgress.html">Teslas Progress</a></li>
+            <li><a href="history.html">History</a></li>
+            <li><a href="enterGamePage.html">Best Drivegame EU-West and NA</a></li>
+          </ul>
+        </article>
       <article>
         <h1>Technology</h1>
         <p>Autonomous cars use a variety of techniques to detect their surroundings, such as radar, laser light, GPS, odometry and computer vision.</p>
