--- a/src/selfDrivingCars.html
+++ b/src/selfDrivingCars.html
@@ -11,14 +11,15 @@
 
 <body class="tesla">
   <article>
-          <ul>
-            <li><a href="homePage.html">Homepage</a></li>
-            <li><a href="selfDrivingCars.html">Basic information</a></li>
-            <li><a class="active" href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
-            <li><a href="DifferrentCompanys.html">Different Companys</a></li>
-            <li><a href="history.html">History</a></li>
-          </ul>
-        </article>
+      <ul>
+        <li><a href="homePage.html">Homepage</a></li>
+        <li><a href="selfDrivingCars.html">Basic information</a></li>
+        <li><a class="active" href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
+        <li><a href="teslaProgress.html">Teslas Progress</a></li>
+        <li><a href="history.html">History</a></li>
+        <li><a href="enterGamePage.html">Best Drivegame EU-West and NA</a></li>
+      </ul>
+    </article>
 
   <article>
 
