--- a/src/enterGamePage.html
+++ b/src/enterGamePage.html
@@ -10,6 +10,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+    <a href="homePage.html" class="btn btn-success" role="button">Back to Homepage</a>
     <form>
       <h1> Play the best Drivegame EU-West and NA</h1>
       <p>To play the game you shoudl give in a Name for the highscore anf then press start</p>
