--- a/src/teslaProgress.html
+++ b/src/teslaProgress.html
@@ -32,7 +32,7 @@
         <p>processing provides additional data about the world on a redundant wavelength</p>
         <p>that is able to see through heavy rain, fog, dust and even the car ahead. With this system the car is able to predict</p>
         <p>any dangerous situation incoming before the driver can even see what is going on.</p>
-        <img src="teslaDistance.png" alt="Tesla's Camera System" width="800" height="500">
+        <img src="teslaCamera.JPG" alt="Tesla's Camera System" width="800" height="400">
       </section>
       <section>
         <h2>Enhanced Autopilot</h2>
