--- a/src/transition.html
+++ b/src/transition.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <title>transition</title>
     <link rel="stylesheet" href="transitionStyle.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" src="transition.js" charset="utf-8"></script>
   </head>
   <body>
+    <section>
+      <a href="homePage.html" class="btn btn-success" role="button">Back to Homepage</a>
+    </section>
   <section>
     <input id="start" type="button" name="Start" value="Start">
     <h2>Traffic Game </h2>
