--- a/src/homePage.html
+++ b/src/homePage.html
@@ -8,19 +8,21 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <title>Homepage</title>
 </head>
-<body>
+<body class="homePage">
   <article>
-    <h1>CONTENT</h1>
+    <h1 class="homePageH1">CONTENT</h1>
   </article>
   <article>
-    <h3>Some basic information about self-driving cars</h3>
+    <h2 class="homePageH2">Some basic information about self-driving cars</h3>
     <a href="selfDrivingCars.html" class="btn btn-success" role="button">Basic information</a>
-    <h3>How self-driving cars "see" their surrounding and how they interpret it</h3>
+    <h2 class="homePageH2">How self-driving cars "see" their surrounding and how they interpret it</h3>
     <a href="selfDrivingCarsSurrounding.html" class="btn btn-success" role="button">How do autonomous cars see their surrounding?</a>
-    <h3>The most famous companies developing self-driving cars</h3>
-    <a href="DifferrentCompanys.html" class="btn btn-success" role="button">Progress of the different companies</a>
-    <h3>The history of the self-driving cars</h3>
+    <h2 class="homePageH2White">The most famous companies developing self-driving cars</h3>
+    <a href="teslaProgress.html" class="btn btn-success" role="button">Teslas Progress</a>
+    <h2 class="homePageH2White">The history of the self-driving cars</h3>
     <a href="history.html" class="btn btn-success" role="button">History</a>
+    <h2 class="homePageH2White">Best Drivegame EU-West and NA</h3>
+    <a href="enterGamePage.html" class="btn btn-success" role="button">Enter Game</a>
   </article>
 </body>
 </html>
