--- a/src/selfDrivingCars.html
+++ b/src/selfDrivingCars.html
@@ -13,8 +13,8 @@
   <article>
       <ul>
         <li><a href="homePage.html">Homepage</a></li>
-        <li><a href="selfDrivingCars.html">Basic information</a></li>
-        <li><a class="active" href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
+        <li><a class="active" href="selfDrivingCars.html">Basic information</a></li>
+        <li><a href="selfDrivingCarsSurrounding.html">How they 'see' their surrounding</a></li>
         <li><a href="teslaProgress.html">Teslas Progress</a></li>
         <li><a href="history.html">History</a></li>
         <li><a href="enterGamePage.html">Best Drivegame EU-West and NA</a></li>
