--- a/src/highScorePage.html
+++ b/src/highScorePage.html
@@ -2,30 +2,45 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="SelfDrivingCarsStyleSheet.css">
+    <link rel="stylesheet" href="Party.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script type="module" src="print_out.js" charset="utf-8"></script>
-    <title>Highscore</title>
+    <title>Last Site</title>
   </head>
   <body>
-    <h1>HighScoreTable</h1>
-    <table>
-      <thead>
-        <tr>
-          <th colspan="3" class="tableheader"> TOP PLAYERS OF THE BEST DRIVEGAME EU-WEST AND NA</th>
-        </tr>
-        <tr>
-          <th>PLAYER</th><th class="tableMiddle">POINTS</th><th>TIME</th>
-        </tr>
-        <tr>
-          <th></th><th class="tableMiddle">POINTS</th><th>TIME</th>
-        </tr>
-      </thead>
-      <tbody>
-
-      </tbody>
-    </table>
+    <a href="homePage.html" class="btn btn-success" role="button">Back to Homepage</a>
+    <a href="" class="btn btn-success" role="button">Scoreboard(Comming soon!)</a>
+    <h1>Thanks for playing</h1>
+    <h2 id="player"></h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Your score is:</h2>
+    <h2 id="points"></h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p>Producers: Marcel Pölzl & Felix Bogengruber</p>
   </body>
 </html>
