--- a/src/transition.html
+++ b/src/transition.html
@@ -19,6 +19,8 @@
     <p>What to do?</p>
     <p id="p2">0 points</p>
     <input id="f" type="button" name="First" value="Stop!">
+    <input id="s" type="button" name="Second" value="Continue!">
+    <br>
     <input id="t" type="button" name="Third" value="Slower!">
     <input id="l" type="button" name="Last" value="Drive carefully!">
     <div><img src="vorrangGeben.jpg"></div>
